# vue3-fastapi-sentry-setup

./: .env  .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml
.github/workflows/: CI.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements_dev.txt  tox.ini
backend/config/: .env
backend/routers/: temp.py
backend/tests/: test_async_connection.py  test_connection.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  routers.ts
frontend/src/components/: IDontKnowName.vue
frontend/src/store/: server.ts
frontend/src/tests/: basic.test.ts
frontend/src/types/: store.ts
frontend/src/views/: Home.vue
nginx/: local.conf  nginx.conf
